--- a/src/style/common.less
+++ b/src/style/common.less
@@ -1,14 +1,17 @@
 .container{
     .nav-left{
         height: calc(100vh);
+        color: #ffffff;
         background-color:#001529;
     }
     .main{
         height: calc(100vh);
+        background-color: #f1f3f5;
     }
     .content{
         position: relative;
         padding: 20px;
+        // background-color: white;  背景色会填充padding的空间
     }
 
  
