--- a/src/components/Header/index.less
+++ b/src/components/Header/index.less
@@ -15,7 +15,17 @@
         padding: 0 20px;
         border-top: 1px solid #f9c700;
         .breadcrumb-title{
-            text-align: center
+            text-align: center;
+            font-size: 18px;
+            &:after{
+                position: absolute;
+                content: "";
+                top: 39px;
+                left: 74px;
+                border-top: 9px solid white;
+                border-left: 12px solid transparent;
+                border-right: 12px solid transparent; 
+            }
         }
         .weather{
             text-align: right;
