antd 按钮的一些玩法

--- a/src/style/common.less
+++ b/src/style/common.less
@@ -7,10 +7,12 @@
     .main{
         height: calc(100vh);
         background-color: #f1f3f5;
+        overflow: auto//设置主体部分 超过 不会影响左侧的导航栏
     }
     .content{
         position: relative;
         padding: 20px;
+       
         // background-color: white;  背景色会填充padding的空间
     }
 
