--- a/src/components/footer/index.less
+++ b/src/components/footer/index.less
@@ -1,10 +1,10 @@
 @import "../../style/default.less";
 .footer{
+    position: relative;
     height: 100px;
     padding: 40px 0;
     text-align: center;
     color: #d7d7d7;
-    
 }
 .footer a:nth-of-type(1) {
     margin-left: 10px;
